--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             <div class="sp_navi">
               <a href="#"><img class="btn u-max-full-width" src="dist/images/top_sp/fb.png" alt="facebook" srcset="dist/images/top_sp/fb@2x.png 2x"></a>
               <a href="#"><img class="btn u-max-full-width" src="dist/images/top_sp/insta.png" alt="instaglam" srcset="dist/images/top_sp/insta@2x.png 2x"></a>
-              <a href="#"><img class="menu_btn btn u-max-full-width" src="dist/images/top_sp/menu_icon.png" alt="menu" srcset="dist/images/top_sp/menu_icon@2x.png 2x"></a>
+              <a href="#" id="menu_js"><img class="menu_btn btn u-max-full-width" src="dist/images/top_sp/menu_icon.png" alt="menu" srcset="dist/images/top_sp/menu_icon@2x.png 2x"></a>
               <ul class="sp_navi_li">
                 <li><a href="#"><img src="dist/images/top/menu_login.png" alt="ログイン"></a></li>
                 <li><a href="#"><img src="dist/images/top/menu_cart.png" alt="カート"></a></li>
                 <li><a href="#"><img src="dist/images/top/menu_mypage.png" alt="マイページ"></a></li>
-                <li><a href="#"><img class="u-full-width" src="dist/images/top/menu_guide.png" alt="ガイド"></a></li>
+                <li><a href="#shop_info" class="cr_btn"><img class="u-full-width" src="dist/images/top/menu_guide.png" alt="ガイド"></a></li>
               </ul>
             </div>
             <!--pc_navi=================================-->
@@ -44,7 +44,7 @@
                 <li><a href="#"><img src="dist/images/top/menu_login.png" alt="ログイン"></a></li>
                 <li><a href="#"><img src="dist/images/top/menu_cart.png" alt="カート"></a></li>
                 <li><a href="#"><img src="dist/images/top/menu_mypage.png" alt="マイページ"></a></li>
-                <li><a href="#"><img src="dist/images/top/menu_guide.png" alt="ガイド"></a></li>
+                <li><a href="#shop_info"><img src="dist/images/top/menu_guide.png" alt="ガイド"></a></li>
                 <li><a href="#"><img src="dist/images/top/facebook.png" alt="facebook"></a></li>
                 <li><a href="#"><img src="dist/images/top/insta.png" alt="instaglam"></a></li>
               </ul>
@@ -231,7 +231,7 @@
           </div>
         </div>
       </div>
-      <a href="#header_in"><img class="pagetop u-max-full-width" src="dist/images/top/pagetop.png" alt="トップに戻る"></a>
+      <a href="#header_in" class="cr_btn"><img class="pagetop u-max-full-width" src="dist/images/top/pagetop.png" alt="トップに戻る"></a>
     </main>
     <footer>
       <div class="container">
