--- a/index.html
+++ b/index.html
@@ -19,38 +19,38 @@
   <body>
     <header>
       <div id ="header_in" class="container">
-          <div>
-            <h1>
-              <a href="index.html"><img class="u-max-full-width" src="dist/images/top_sp/logo.png" alt="Apple Berry" srcset="dist/images/top_sp/logo@2x.png 2x" /></a>
-            </h1>
+        <div>
+          <h1>
+            <a href="index.html" id="logo"><img class="u-max-full-width" src="dist/images/top_sp/logo.png" alt="Apple Berry" srcset="dist/images/top_sp/logo@2x.png 2x" /></a>
+          </h1>
+        </div>
+      <!--navi==================================-->
+        <div class="navi">
+          <!--sp_navi==================================-->
+          <div class="sp_navi">
+            <a href="https://www.facebook.com/FacebookJapan/" class="btn"><img class="u-max-full-width" src="dist/images/top_sp/fb.png" alt="facebook" srcset="dist/images/top_sp/fb@2x.png 2x"></a>
+            <a href="https://www.instagram.com/" class="btn"><img class="u-max-full-width" src="dist/images/top_sp/insta.png" alt="instaglam" srcset="dist/images/top_sp/insta@2x.png 2x"></a>
+            <a href="#" id="menu_js" class="btn"><img class="menu_btn u-max-full-width" src="dist/images/top_sp/menu_icon.png" alt="menu" srcset="dist/images/top_sp/menu_icon@2x.png 2x"></a>
+            <ul class="sp_navi_li">
+              <li><a href="#"><img src="dist/images/top/menu_login.png" alt="ログイン"></a></li>
+              <li><a href="#"><img src="dist/images/top/menu_cart.png" alt="カート"></a></li>
+              <li><a href="#"><img src="dist/images/top/menu_mypage.png" alt="マイページ"></a></li>
+              <li><a href="#shopping_guide" class="cr_btn"><img class="u-full-width" src="dist/images/top/menu_guide.png" alt="ガイド"></a></li>
+            </ul>
           </div>
-        <!--navi==================================-->
-          <div class="navi">
-            <!--sp_navi==================================-->
-            <div class="sp_navi">
-              <a href="#"><img class="btn u-max-full-width" src="dist/images/top_sp/fb.png" alt="facebook" srcset="dist/images/top_sp/fb@2x.png 2x"></a>
-              <a href="#"><img class="btn u-max-full-width" src="dist/images/top_sp/insta.png" alt="instaglam" srcset="dist/images/top_sp/insta@2x.png 2x"></a>
-              <a href="#" id="menu_js"><img class="menu_btn btn u-max-full-width" src="dist/images/top_sp/menu_icon.png" alt="menu" srcset="dist/images/top_sp/menu_icon@2x.png 2x"></a>
-              <ul class="sp_navi_li">
-                <li><a href="#"><img src="dist/images/top/menu_login.png" alt="ログイン"></a></li>
-                <li><a href="#"><img src="dist/images/top/menu_cart.png" alt="カート"></a></li>
-                <li><a href="#"><img src="dist/images/top/menu_mypage.png" alt="マイページ"></a></li>
-                <li><a href="#shop_info" class="cr_btn"><img class="u-full-width" src="dist/images/top/menu_guide.png" alt="ガイド"></a></li>
-              </ul>
-            </div>
-            <!--pc_navi=================================-->
-            <div class="pc_navi">
-              <ul class="pc_navi_li">
-                <li><a href="#"><img src="dist/images/top/menu_login.png" alt="ログイン"></a></li>
-                <li><a href="#"><img src="dist/images/top/menu_cart.png" alt="カート"></a></li>
-                <li><a href="#"><img src="dist/images/top/menu_mypage.png" alt="マイページ"></a></li>
-                <li><a href="#shop_info"><img src="dist/images/top/menu_guide.png" alt="ガイド"></a></li>
-                <li><a href="#"><img src="dist/images/top/facebook.png" alt="facebook"></a></li>
-                <li><a href="#"><img src="dist/images/top/insta.png" alt="instaglam"></a></li>
-              </ul>
-            </div>
+          <!--pc_navi=================================-->
+          <div class="pc_navi">
+            <ul class="pc_navi_li">
+              <li><a href="#" class="u-max-full-width"><img src="dist/images/top/menu_login.png" alt="ログイン"></a></li>
+              <li><a href="#" class="u-max-full-width"><img src="dist/images/top/menu_cart.png" alt="カート"></a></li>
+              <li><a href="#" class="u-max-full-width"><img src="dist/images/top/menu_mypage.png" alt="マイページ"></a></li>
+              <li class="cart"><a href="#shopping_guide" class="u-max-full-width"><img src="dist/images/top/menu_guide.png" alt="ガイド"></a></li>
+              <li><a href="https://www.facebook.com/FacebookJapan/" class="u-max-full-width"><img src="dist/images/top/facebook.png" alt="facebook"></a></li>
+              <li><a href="https://www.instagram.com/" class="u-max-full-width"><img src="dist/images/top/insta.png" alt="instaglam"></a></li>
+            </ul>
           </div>
         </div>
+      </div>
     </header>
     <!--top=================================-->
     <main>
@@ -65,7 +65,8 @@
             </div>
             <section id="new_items">
               <div>
-                <h2><img class="title u-full-width" src="dist/images/top_sp/title_new_item.png" alt="facebook" srcset="dist/images/top_sp/title_new_item@2x.png 2x"></h2>
+                <h2><img class="sp_title u-full-width" src="dist/images/top_sp/title_new_item.png" alt="News Item" srcset="dist/images/top_sp/title_new_item@2x.png 2x">
+                <img class="pc_title u-full-width" src="dist/images/top/title_newitems.png" alt="News Item"></h2>
                 <ul class="u-cf">
                   <li>
                     <a href="#"><img class="u-full-width" src="dist/images/top/item_01.jpg" alt=""></a>
@@ -102,7 +103,8 @@
             </section>
             <section id="popular_items">
               <div>
-                <h2><img class="title u-full-width" src="dist/images/top_sp/title_popular.png" alt="facebook" srcset="dist/images/top_sp/title_popular@2x.png 2x"></h2>
+                <h2><img class="sp_title u-full-width" src="dist/images/top_sp/title_popular.png" alt="Popular Item" srcset="dist/images/top_sp/title_popular@2x.png 2x">
+                <img class="pc_title u-full-width" src="dist/images/top/title_popular.png" alt="Popular Item"></h2>
                 <ul class="u-cf">
                   <li>
                     <a href="#"><img class="u-full-width" src="dist/images/top/item_07.jpg" alt=""></a>
@@ -138,7 +140,8 @@
               </div>
             </section>
             <section id="shopping_guide">
-              <h2><img class="title u-full-width" src="dist/images/top_sp/title_guide.png" alt="facebook" srcset="dist/images/top_sp/title_guide@2x.png 2x"></h2>
+              <h2><img class="sp_title u-full-width" src="dist/images/top_sp/title_guide.png" alt="Shopping Guide" srcset="dist/images/top_sp/title_guide@2x.png 2x">
+              <img class="pc_title u-full-width" src="dist/images/top/title_guide.png" alt="Shopping Guide"></h2>
               <div class="delivery">
                 <h3>お届けについて</h3>
                 <img class="delivery_img u-max-full-width" src="dist/images/top/otodoke_banner.png" alt="合計５千円以上で送料無料">
@@ -175,34 +178,35 @@
           <div class="three columns">
             <div id="side_bar">
               <div id="search">
+                <img class="seach_logo" src="dist/images/top/itemserch.png">
                 <input type="seach" name="subject" placeholder="Search.." class="input_bg">
               </div>
               
               <section id="links">
-                <h4><img class="u-max-full-width" src="dist/images/top/pagelink.png" alt="">
-                <img class="right u-max-full-width" src="dist/images/top/next_icon.png" alt=""></h4>
+                <h4><img class="links_title u-max-full-width" src="dist/images/top/pagelink.png" alt="">
+                <img class="next_img u-full-width" src="dist/images/top/next_icon.png" alt=""></h4>
               </section>
               <section id="categories">
-                <h4><img class="u-max-full-width" src="dist/images/top/categories.png" alt="">
-                <img class="right u-max-full-width" src="dist/images/top/down_icon.png" alt=""></h4>
+                <h4><img class="categories_title u-max-full-width" src="dist/images/top/categories.png" alt="">
+                <img class="down_img u-full-width" src="dist/images/top/down_icon.png" alt=""></h4>
                 <ul>
                   <li>
-                    <p>カテゴリー名<img class="right u-max-full-width" src="dist/images/top/next_icon_gray.png" alt=""></p>
+                    <p>カテゴリー名<img class="next_img u-full-width" src="dist/images/top/next_icon_gray.png" alt=""></p>
                   </li>
                   <li>
-                    <p>カテゴリー名<img class="right u-max-full-width" src="dist/images/top/next_icon_gray.png" alt=""></p>
+                    <p>カテゴリー名<img class="next_img u-full-width" src="dist/images/top/next_icon_gray.png" alt=""></p>
                   </li>
                   <li>
-                    <p>カテゴリー名<img class="right u-max-full-width" src="dist/images/top/next_icon_gray.png" alt=""></p>
+                    <p>カテゴリー名<img class="next_img u-full-width" src="dist/images/top/next_icon_gray.png" alt=""></p>
                   </li>
                   <li>
-                    <p>カテゴリー名<img class="right u-max-full-width" src="dist/images/top/next_icon_gray.png" alt=""></p>
+                    <p>カテゴリー名<img class="next_img u-full-width" src="dist/images/top/next_icon_gray.png" alt=""></p>
                   </li>
                   <li>
-                    <p>カテゴリー名<img class="right u-max-full-width" src="dist/images/top/next_icon_gray.png" alt=""></p>
+                    <p>カテゴリー名<img class="next_img u-full-width" src="dist/images/top/next_icon_gray.png" alt=""></p>
                   </li>
                   <li>
-                    <p>カテゴリー名<img class="right u-max-full-width" src="dist/images/top/next_icon_gray.png" alt=""></p>
+                    <p>カテゴリー名<img class="next_img u-full-width" src="dist/images/top/next_icon_gray.png" alt=""></p>
                   </li>
                 </ul>
               </section>
@@ -218,7 +222,7 @@
                 </div>
               </aside>
               <aside id="shop_info">
-                <h4><img class="u-max-full-width" src="dist/images/top/shop_info.png" alt="shop info"></h4>
+                <h4><img class="shop_info_title u-max-full-width" src="dist/images/top/shop_info.png" alt="shop info"></h4>
                 <div class="store_box u-cf">
                   <img class="store_img u-max-full-width" src="dist/images/top/shopinfo_img.jpg" alt="店外の様子">
                   <div class="store_right">
