top_page_Complete

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <li><a href="#"><img src="dist/images/top/menu_login.png" alt="ログイン"></a></li>
               <li><a href="#"><img src="dist/images/top/menu_cart.png" alt="カート"></a></li>
               <li><a href="#"><img src="dist/images/top/menu_mypage.png" alt="マイページ"></a></li>
-              <li><a href="#shopping_guide" class="cr_btn"><img class="u-full-width" src="dist/images/top/menu_guide.png" alt="ガイド"></a></li>
+              <li><a href="#shopping_guide"><img class="u-full-width" src="dist/images/top/menu_guide.png" alt="ガイド"></a></li>
             </ul>
           </div>
           <!--pc_navi=================================-->
@@ -45,8 +45,8 @@
               <li><a href="#" class="u-max-full-width"><img src="dist/images/top/menu_cart.png" alt="カート"></a></li>
               <li><a href="#" class="u-max-full-width"><img src="dist/images/top/menu_mypage.png" alt="マイページ"></a></li>
               <li class="cart"><a href="#shopping_guide" class="u-max-full-width"><img src="dist/images/top/menu_guide.png" alt="ガイド"></a></li>
-              <li><a href="https://www.facebook.com/FacebookJapan/" class="u-max-full-width"><img src="dist/images/top/facebook.png" alt="facebook"></a></li>
-              <li><a href="https://www.instagram.com/" class="u-max-full-width"><img src="dist/images/top/insta.png" alt="instaglam"></a></li>
+              <li><a href="https://www.facebook.com/FacebookJapan/" class="pc_navi_btn u-max-full-width"><img src="dist/images/top/facebook.png" alt="facebook"></a></li>
+              <li><a href="https://www.instagram.com/" class="pc_navi_btn u-max-full-width"><img src="dist/images/top/insta.png" alt="instaglam"></a></li>
             </ul>
           </div>
         </div>
@@ -235,7 +235,12 @@
           </div>
         </div>
       </div>
-      <a href="#header_in" class="cr_btn"><img class="pagetop u-max-full-width" src="dist/images/top/pagetop.png" alt="トップに戻る"></a>
+      <div class="container">
+        <div class="row">
+          <div class="twelve columns">
+            <a href="#header_in"><img class="pagetop u-max-full-width" src="dist/images/top/pagetop.png" alt="トップに戻る"></a>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="container">
