products_pc_fix

--- a/products.html
+++ b/products.html
@@ -18,7 +18,7 @@
   
   <body>
     <header>
-      <div id ="header_in" class="container">
+      <div id ="header_in" class="container w_100">
         <div>
           <h1>
             <a href="index.html" id="logo"><img class="u-max-full-width" src="dist/images/top_sp/logo.png" alt="Apple Berry" srcset="dist/images/top_sp/logo@2x.png 2x" /></a>
@@ -76,11 +76,11 @@
               </li>
             </ul>
             <div id="details_area">
-              <div class="details_first">
+              <div class="details_first u-cf">
                 <p class="product_name">商品名が入ります</p>
                 <p class="product_no">fa0001-91</p>
-                <a href="#"><img class="u-full-width" src="dist/images/products/pro_img_01.jpg" alt=""></a>
               </div>
+              <a href="#" class="pro_main"><img class="u-full-width" src="dist/images/products/pro_img_01.jpg" alt=""></a>
               <ul class="details_li u-cf">
                 <li>
                   <a href=""><img src="dist/images/products/pro_img_01.jpg"></a>
@@ -124,19 +124,25 @@
                   </tr>
                 </table>
               </section>
-              <section class="products_price">
-                <h5>PRICE</h5>
-                <p><a>¥<span>1,000</span></a>(tax in)</p>
-              </section>
-              <section class="quantity">
-                <h5>Quantity</h5>
-                <input type="text" name="subject" placeholder="" class="quantity_input"></input>
-              </section>
-              <a href="" class="cart_btn"><img src="dist/images/products/add_to_cart.png"></a>
-              <section class="description">
+              <div class="pc_left">
+                <section class="products_price">
+                  <h5>PRICE</h5>
+                  <p><a>¥<span>1,000</span></a>(tax in)</p>
+                </section>
+                <section class="quantity">
+                  <h5>Quantity</h5>
+                  <input type="text" name="subject" placeholder="" class="quantity_input"></input>
+                </section>
+              </div>
+              <div class="pc_right">
+                <a href="" class="cart_btn"><img src="dist/images/products/add_to_cart.png"></a>
+              </div>
+              <section class="description u-cf">
                 <h5>商品説明</h5>
                 <p>■説明タイトル説明タイトル説明タイトル説明タイトル</p>
-                <a>説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト</a>
+                <a>説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明
+                <br>テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト説明テキ
+                <br>スト説明テキスト説明テキスト説明テキスト説明テキスト説明テキスト</a>
                 <table>
                   <tr>
                     <th>カラー</th><td>説明文が入ります説明文がはいります</td>
