--- a/category.html
+++ b/category.html
@@ -234,8 +234,8 @@
           <div class="three columns">
             <div id="side_bar">
               <div id="search">
-                <img class="seach_logo" src="dist/images/top/itemserch.png">
-                <input type="seach" name="subject" placeholder="Search.." class="input_bg">
+                <img class="seach_logo" src="dist/images/top/itemserch.png" alt="">
+                <input type="search" name="subject" placeholder="Search.." class="input_bg">
               </div>
               
               <section id="links">
@@ -295,6 +295,7 @@
         <div class="row">
           <div class="twelve columns">
             <a href="#header_in"><img class="pagetop u-max-full-width" src="dist/images/top/pagetop.png" alt="トップに戻る"></a>
+          </div>
         </div>
       </div>
     </main>
