--- a/products.html
+++ b/products.html
@@ -70,7 +70,7 @@
                 </a>
               </li>
               <li>
-                <a href="" itemprop="url">
+                <a href="">
                   <span>商品名</span>
                 </a>
               </li>
@@ -83,34 +83,34 @@
               <a href="#" class="pro_main"><img class="u-full-width" src="dist/images/products/pro_img_01.jpg" alt=""></a>
               <ul class="details_li u-cf">
                 <li>
-                  <a href=""><img src="dist/images/products/pro_img_01.jpg"></a>
+                  <a href=""><img src="dist/images/products/pro_img_01.jpg" alt=""></a>
                 </li>
                 <li>
-                  <a href=""><img src="dist/images/products/pro_img_02.jpg"></a>
+                  <a href=""><img src="dist/images/products/pro_img_02.jpg" alt=""></a>
                 </li>
                 <li>
-                  <a href=""><img src="dist/images/products/pro_img_03.jpg"></a>
+                  <a href=""><img src="dist/images/products/pro_img_03.jpg" alt=""></a>
                 </li>
                 <li>
-                  <a href=""><img src="dist/images/products/pro_img_04.jpg"></a>
+                  <a href=""><img src="dist/images/products/pro_img_04.jpg" alt=""></a>
                 </li>
                 <li>
-                  <a href=""><img src="dist/images/products/pro_img_05.jpg"></a>
+                  <a href=""><img src="dist/images/products/pro_img_05.jpg" alt=""></a>
                 </li>
                 <li>
-                  <a href=""><img src="dist/images/products/gray_pro_img.jpg"></a>
+                  <a href=""><img src="dist/images/products/gray_pro_img.jpg" alt=""></a>
                 </li>
                 <li>
-                  <a href=""><img src="dist/images/products/gray_pro_img.jpg"></a>
+                  <a href=""><img src="dist/images/products/gray_pro_img.jpg" alt=""></a>
                 </li>
                 <li>
-                  <a href=""><img src="dist/images/products/gray_pro_img.jpg"></a>
+                  <a href=""><img src="dist/images/products/gray_pro_img.jpg" alt=""></a>
                 </li>
                 <li>
-                  <a href=""><img src="dist/images/products/gray_pro_img.jpg"></a>
+                  <a href=""><img src="dist/images/products/gray_pro_img.jpg" alt=""></a>
                 </li>
                 <li>
-                  <a href=""><img src="dist/images/products/gray_pro_img.jpg"></a>
+                  <a href=""><img src="dist/images/products/gray_pro_img.jpg" alt=""></a>
                 </li>
               </ul>
               <section class="products_color">
@@ -131,11 +131,11 @@
                 </section>
                 <section class="quantity">
                   <h5>Quantity</h5>
-                  <input type="text" name="subject" placeholder="" class="quantity_input"></input>
+                  <input type="text" name="subject" placeholder="" class="quantity_input">
                 </section>
               </div>
               <div class="pc_right">
-                <a href="" class="cart_btn"><img src="dist/images/products/add_to_cart.png"></a>
+                <a href="" class="cart_btn"><img src="dist/images/products/add_to_cart.png" alt=""></a>
               </div>
               <section class="description u-cf">
                 <h5>商品説明</h5>
@@ -216,8 +216,8 @@
           <div class="three columns">
             <div id="side_bar">
               <div id="search">
-                <img class="seach_logo" src="dist/images/top/itemserch.png">
-                <input type="seach" name="subject" placeholder="Search.." class="input_bg">
+                <img class="seach_logo" src="dist/images/top/itemserch.png" alt="">
+                <input type="search" name="subject" placeholder="Search.." class="input_bg">
               </div>
               
               <section id="links">
@@ -277,6 +277,7 @@
         <div class="row">
           <div class="twelve columns">
             <a href="#header_in"><img class="pagetop u-max-full-width" src="dist/images/top/pagetop.png" alt="トップに戻る"></a>
+          </div>
         </div>
       </div>
     </main>
