--- a/category.html
+++ b/category.html
@@ -60,7 +60,7 @@
           <!--パンくずリスト=================================-->
             <ul class="breadcrumb">
               <li>
-                <a href="" class="home_icon">
+                <a href="index.html" class="home_icon">
                   <span>HOME</span>
                 </a>
               </li>
