--- a/products.html
+++ b/products.html
@@ -18,7 +18,7 @@
   
   <body>
     <header>
-      <div id ="header_in" class="container w_100">
+      <div id ="header_in" class="container">
         <div>
           <h1>
             <a href="index.html" id="logo"><img class="u-max-full-width" src="dist/images/top_sp/logo.png" alt="Apple Berry" srcset="dist/images/top_sp/logo@2x.png 2x" /></a>
@@ -54,18 +54,18 @@
     </header>
     <!--top=================================-->
     <main>
-      <div>
+      <div class="container">
         <div class="row">
           <div class="nine columns">
           <!--パンくずリスト=================================-->
             <ul class="breadcrumb product_breadcrumb">
               <li>
-                <a href="" class="home_icon">
+                <a href="index.html" class="home_icon">
                   <span>HOME</span>
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="category.html">
                   <span>カテゴリー名</span>
                 </a>
               </li>
@@ -80,37 +80,37 @@
                 <p class="product_name">商品名が入ります</p>
                 <p class="product_no">fa0001-91</p>
               </div>
-              <a href="#" class="pro_main"><img class="u-full-width" src="dist/images/products/pro_img_01.jpg" alt=""></a>
-              <ul class="details_li u-cf">
+              <a id="display_img" href="#" class="pro_main"><img class="u-full-width" src="dist/images/products/pro_img_01.jpg" alt=""></a>
+              <ul id="list_img" class="details_li u-cf">
                 <li>
-                  <a href=""><img src="dist/images/products/pro_img_01.jpg" alt=""></a>
+                  <img src="dist/images/products/pro_img_01.jpg" alt="">
                 </li>
                 <li>
-                  <a href=""><img src="dist/images/products/pro_img_02.jpg" alt=""></a>
+                  <img src="dist/images/products/pro_img_02.jpg" alt="">
                 </li>
                 <li>
-                  <a href=""><img src="dist/images/products/pro_img_03.jpg" alt=""></a>
+                  <img src="dist/images/products/pro_img_03.jpg" alt="">
                 </li>
                 <li>
-                  <a href=""><img src="dist/images/products/pro_img_04.jpg" alt=""></a>
+                  <img src="dist/images/products/pro_img_04.jpg" alt="">
                 </li>
                 <li>
-                  <a href=""><img src="dist/images/products/pro_img_05.jpg" alt=""></a>
+                  <img src="dist/images/products/pro_img_05.jpg" alt="">
                 </li>
                 <li>
-                  <a href=""><img src="dist/images/products/gray_pro_img.jpg" alt=""></a>
+                  <img src="dist/images/products/gray_pro_img.jpg" alt="">
                 </li>
                 <li>
-                  <a href=""><img src="dist/images/products/gray_pro_img.jpg" alt=""></a>
+                  <img src="dist/images/products/gray_pro_img.jpg" alt="">
                 </li>
                 <li>
-                  <a href=""><img src="dist/images/products/gray_pro_img.jpg" alt=""></a>
+                  <img src="dist/images/products/gray_pro_img.jpg" alt="">
                 </li>
                 <li>
-                  <a href=""><img src="dist/images/products/gray_pro_img.jpg" alt=""></a>
+                  <img src="dist/images/products/gray_pro_img.jpg" alt="">
                 </li>
                 <li>
-                  <a href=""><img src="dist/images/products/gray_pro_img.jpg" alt=""></a>
+                  <img src="dist/images/products/gray_pro_img.jpg" alt="">
                 </li>
               </ul>
               <section class="products_color">
