--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="sp_navi">
             <a href="https://www.facebook.com/FacebookJapan/" class="btn"><img class="u-max-full-width" src="dist/images/top_sp/fb.png" alt="facebook" srcset="dist/images/top_sp/fb@2x.png 2x"></a>
             <a href="https://www.instagram.com/" class="btn"><img class="u-max-full-width" src="dist/images/top_sp/insta.png" alt="instaglam" srcset="dist/images/top_sp/insta@2x.png 2x"></a>
-            <a href="#" id="menu_js" class="btn"><img class="menu_btn u-max-full-width" src="dist/images/top_sp/menu_icon.png" alt="menu" srcset="dist/images/top_sp/menu_icon@2x.png 2x"></a>
+            <a id="menu_js" class="btn"><img class="menu_btn u-max-full-width" src="dist/images/top_sp/menu_icon.png" alt="menu" srcset="dist/images/top_sp/menu_icon@2x.png 2x"></a>
             <ul class="sp_navi_li">
               <li><a href="#"><img src="dist/images/top/menu_login.png" alt="ログイン"></a></li>
               <li><a href="#"><img src="dist/images/top/menu_cart.png" alt="カート"></a></li>
